--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,22 @@
 ﻿<Window x:Class="NetworkProgramming_WpfIO.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:NetworkProgramming_WpfIO"
+        xmlns:local="clr-namespace:ChatApplication"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen" Background="#212121">
+        Title="Chat Window" Height="450" Width="800">
     <Grid>
-
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+        <ListBox x:Name="ChatListBox" Grid.Row="0" Grid.Column="0"/>
+        <TextBox x:Name="MessageTextBox" Grid.Row="1" Grid.Column="0" Margin="0,10,0,0"/>
+        <Button x:Name="SendButton" Content="Send" Grid.Row="1" Grid.Column="1" Margin="10,10,0,0" Click="SendButton_Click"/>
     </Grid>
 </Window>
