--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -20,6 +20,7 @@
         <TextBox x:Name="txtMessage" Margin="20"/>
         <StackPanel Grid.Row="1">
             <TextBox x:Name="txtFrom" Margin="10"/>
+            <PasswordBox x:Name="pass" Margin="10"/>
             <TextBox x:Name="txtTo" Margin="10"/>
 
         </StackPanel>
