--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,23 +8,40 @@
         Title="MainWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen" Background="#212121">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="0.3*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition/>
+            <RowDefinition Height="1.2*"/>
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <TextBox x:Name="txtMessage" Margin="20"/>
-        <StackPanel Grid.Row="1">
-            <TextBox x:Name="txtFrom" Margin="10"/>
-            <PasswordBox x:Name="pass" Margin="10"/>
-            <TextBox x:Name="txtTo" Margin="10"/>
-
+       
+        <StackPanel Grid.Column="1">
+            <TextBox Grid.Column="1" x:Name="subject" Margin="20" Height="30" CaretBrush="Azure" Foreground="Azure"/>
+            <TextBox Grid.Column="1" x:Name="message" Margin="20" Height="65" CaretBrush="Azure" Foreground="Azure"/>
+            
+        </StackPanel>
+        
+        <StackPanel Grid.Column="1" Grid.Row="1">
+            <TextBox x:Name="from" Margin="10" CaretBrush="Azure" Foreground="Azure"/>
+            <TextBox x:Name="pass" Margin="10" CaretBrush="Azure" Foreground="Azure"/>
+            <TextBox x:Name="to" Margin="10" CaretBrush="Azure" Foreground="Azure"/>
         </StackPanel>
 
-        <Button Grid.Column="1" x:Name="SendBtn" Content="Send" Click="SendBtn_Click" Margin="20"/>
+        <Button Grid.Column="1" Grid.Row="2" x:Name="SendBtn" Content="Send" Foreground="Azure" Click="SendBtn_Click" Margin="20" Style="{StaticResource MaterialDesignFlatButton}"/>
+
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Right" >
+            <Label Content="Subject" Foreground="Azure" FontSize="16" Margin="0 20 0 0"/>
+            <Label Content="Message" Foreground="Azure" FontSize="16" Margin="0 32 0 0"/>
+        </StackPanel>
+
+        <StackPanel Grid.Row="1" Orientation="Vertical" HorizontalAlignment="Right">
+            <Label Content="From" Foreground="Azure" FontSize="16" Margin="0 5 0 0"/>
+            <Label Content="Password" Foreground="Azure" FontSize="16" Margin="0 15 0 0"/>
+            <Label Content="To" Foreground="Azure" FontSize="16" Margin="0 15 0 0"/>
+        </StackPanel>
+        
     </Grid>
 </Window>
